{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 22,
  "lineage": "cddb13a1-5a54-79e0-d7e1-4a2903296ad6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/networkInterfaces/Safa_LazregDS",
            "internal_domain_name_suffix": "2j20slyscywexc5osu1mue1pme.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Safa_LazregDS-nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/publicIPAddresses/Safa_LazregDS-public-ip",
                "subnet_id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/virtualNetworks/Safa_LazregDS/subnets/Safa_LazregDS"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4C-0E-57",
            "name": "Safa_LazregDS",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Safa_LazregDS",
            "virtual_machine_id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Compute/virtualMachines/Safa_LazregDS"
          },
          "dependencies": [
            "azurerm_public_ip.test3",
            "azurerm_resource_group.test",
            "azurerm_subnet.test3",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/networkSecurityGroups/Safa_LazregDS-security-group",
            "location": "westeurope",
            "name": "Safa_LazregDS-security-group",
            "resource_group_name": "Safa_LazregDS",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Safa_LazregDS-security-rule",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/networkSecurityGroups/Safa_LazregDS-security-group/securityRules/Safa_LazregDS-security-rule",
            "name": "Safa_LazregDS-security-rule",
            "network_security_group_name": "Safa_LazregDS-security-group",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "Safa_LazregDS",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test3",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/publicIPAddresses/Safa_LazregDS-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.73.176.232",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Safa_LazregDS-public-ip",
            "resource_group_name": "Safa_LazregDS",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/virtualNetworks/Safa_LazregDS/subnets/Safa_LazregDS",
            "name": "Safa_LazregDS",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Safa_LazregDS",
            "virtual_network_name": "Safa_LazregDS"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2fa979e2-1612-4b2c-8bee-9536ca136f64",
            "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/virtualNetworks/Safa_LazregDS",
            "location": "westeurope",
            "name": "Safa_LazregDS",
            "resource_group_name": "Safa_LazregDS",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e6f08f5a-df19-45bd-91cd-11d98b61e5d2/resourceGroups/Safa_LazregDS/providers/Microsoft.Network/virtualNetworks/Safa_LazregDS/subnets/Safa_LazregDS",
                "name": "Safa_LazregDS"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}